Qt6: Use plugin template

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,65 +1,38 @@
-cmake_minimum_required(VERSION 3.5)
-project(tuna VERSION 1.7.1)
+cmake_minimum_required(VERSION 3.16...3.21)
 
+# Change obs-plugintemplate to your plugin's name in a machine-readable format (e.g.:
+# obs-myawesomeplugin) and set
+project(tuna VERSION 1.8.0)
+add_library(${CMAKE_PROJECT_NAME} MODULE)
 add_subdirectory(deps)
-
-set(PLUGIN_AUTHOR "univrsal")
-set(PLUGIN_GIT tuna)
-set(LINUX_MAINTAINER_EMAIL "uni@vrsal.xyz")
-set(MACOS_BUNDLEID "xyz.vrsal.tuna")
-set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_PREFIX_PATH "${QTDIR}")
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTOUIC ON)
 
 string(TIMESTAMP TODAY "%Y.%m.%d %H:%M")
 add_definitions(-DBUILD_TIME="${TODAY}")
 add_definitions(-DTUNA_VERSION="${PROJECT_VERSION}")
-
-include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/ObsPluginHelpers.cmake)
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/external")
-if (MSVC OR APPLE)
-    set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/obs")
-endif()
-
-find_package(LibObs REQUIRED)
-find_package(Qt6Widgets REQUIRED)
-find_package(Libcurl REQUIRED)
-
-option(LOCAL_INSTALLATION "Whether to install for the current user (default: OFF)" OFF)
-option(GLOBAL_INSTALLATION "Whether to install for all users (default: OFF)" OFF)
-
 include_directories(${LIBCURL_INCLUDE_DIRS})
 include_directories(${TAGLIB_INCLUDE_DIRS})
 include_directories(${LIBMPDCLIENT_INCLUDE_DIRS})
 include_directories(${MONGOOSE_INCLUDE_DIRS})
-
-if (OBS_FRONTEND_INCLUDE)
-    include_directories(${OBS_FRONTEND_INCLUDE})
-endif()
-
 add_definitions(${LIBCURL_DEFINITIONS})
 
-configure_file(
-    package/installer-macOS.pkgproj.in
-    ../package/installer-macOS.pkgproj
-)
-configure_file(
-    package/installer-Windows.iss.in
-    ../package/installer-Windows.iss
-)
-configure_file(
-    package/README.txt.in
-    ../package/README.txt
-)
+
+# Replace `Your Name Here` with the name (yours or your organization's) you want to see as the
+# author of the plugin (in the plugin's metadata itself and in the installers)
+set(PLUGIN_AUTHOR "univrsal")
+
+# Replace `com.example.obs-plugin-template` with a unique Bundle ID for macOS releases (used both in
+# the installer and when submitting the installer for notarization)
+set(MACOS_BUNDLEID "com.example.${CMAKE_PROJECT_NAME}")
+
+# Replace `me@contoso.com` with the maintainer email address you want to put in Linux packages
+set(LINUX_MAINTAINER_EMAIL "uni@vrsal.xyz")
+
+option(LOCAL_INSTALLATION "Whether to install for the current user (default: OFF)" OFF)
 
 if (NOT CREDS)
     set(CREDS "MISSING")
     message(WARNING "Missing Spotify API info")
 endif()
-
 if (NOT LASTFM_CREDS)
     set(LASTFM_CREDS "MISSING")
     message(WARNING "Missing Last.fm API info")
@@ -67,254 +40,197 @@ endif()
 
 mark_as_advanced(LASTFM_CREDS)
 mark_as_advanced(CREDS)
-
 add_definitions(-DSPOTIFY_CREDENTIALS=\"${CREDS}\")
 add_definitions(-DLASTFM_CREDENTIALS=\"${LASTFM_CREDS}\")
 
-set(tuna_ui
-        src/gui/tuna_gui.ui
-        src/gui/output_edit_dialog.ui
-        src/gui/music_control.ui
-        src/gui/widgets/lastfm.ui
-        src/gui/widgets/mpd.ui
-        src/gui/widgets/window_title.ui
-        src/gui/widgets/spotify.ui
-        src/gui/widgets/icecast.ui
-        src/gui/widgets/vlc.ui)
+target_sources(${CMAKE_PROJECT_NAME} PRIVATE
+  ./src/gui/tuna.qrc
+  ./src/gui/tuna_gui.ui
+  ./src/gui/output_edit_dialog.ui
+  ./src/gui/music_control.ui
+  ./src/gui/widgets/lastfm.ui
+  ./src/gui/widgets/mpd.ui
+  ./src/gui/widgets/window_title.ui
+  ./src/gui/widgets/spotify.ui
+  ./src/gui/widgets/icecast.ui
+  ./src/gui/widgets/vlc.ui
+  ./src/tuna_plugin.cpp
+  ./src/util/constants.hpp
+  ./src/util/config.cpp
+  ./src/util/config.hpp
+  ./src/util/creds.hpp
+  ./src/gui/tuna_gui.cpp
+  ./src/gui/tuna_gui.hpp
+  ./src/gui/output_edit_dialog.cpp
+  ./src/gui/output_edit_dialog.hpp
+  ./src/gui/music_control.cpp
+  ./src/gui/music_control.hpp
+  ./src/gui/scrolltext.cpp
+  ./src/gui/scrolltext.hpp
+  ./src/query/music_source.hpp
+  ./src/query/music_source.cpp
+  ./src/query/spotify_source.cpp
+  ./src/query/spotify_source.hpp
+  ./src/query/mpd_source.cpp
+  ./src/query/mpd_source.hpp
+  ./src/query/window_source.cpp
+  ./src/query/window_source.hpp
+  ./src/query/lastfm_source.cpp
+  ./src/query/lastfm_source.hpp
+  ./src/query/gpmdp_source.cpp
+  ./src/query/gpmdp_source.hpp
+  ./src/query/web_source.cpp
+  ./src/query/web_source.hpp
+  ./src/query/icecast_source.cpp
+  ./src/query/icecast_source.hpp
+  ./src/query/song.cpp
+  ./src/query/song.hpp
+  ./src/util/format.cpp
+  ./src/util/format.hpp
+  ./src/source/progress.cpp
+  ./src/source/progress.hpp
+  ./src/util/cover_tag_handler.cpp
+  ./src/util/cover_tag_handler.hpp
+  ./src/query/vlc_obs_source.cpp
+  ./src/query/vlc_obs_source.hpp
+  ./src/util/tuna_thread.cpp
+  ./src/util/tuna_thread.hpp
+  ./src/util/utility.cpp
+  ./src/util/utility.hpp
+  ./src/util/web_server.cpp
+  ./src/util/web_server.hpp
+  ./src/util/window/window_helper.hpp
+  ./src/gui/widgets/lastfm.cpp
+  ./src/gui/widgets/lastfm.hpp
+  ./src/gui/widgets/mpd.cpp
+  ./src/gui/widgets/mpd.hpp
+  ./src/gui/widgets/window_title.cpp
+  ./src/gui/widgets/window_title.hpp
+  ./src/gui/widgets/icecast.cpp
+  ./src/gui/widgets/icecast.hpp
+  ./src/gui/widgets/spotify.cpp
+  ./src/gui/widgets/spotify.hpp
+  ./src/gui/widgets/vlc.cpp
+  ./src/gui/widgets/vlc.hpp
+  "${MONGOOSE_SRC}"
+)
 
-qt6_wrap_ui(tuna_ui_headers ${tuna_ui})
-qt6_add_resources(tuna_qrc_sources src/gui/tuna.qrc)
+# Import libobs as main plugin dependency
+include(cmake/ObsPluginHelpers.cmake)
 
-if (UNIX AND NOT APPLE)
-    add_definitions(-DLINUX=1)
-    set(tuna_platform_sources "./src/util/window/window_helper_nix.cpp")
-    set(LIBOBS_LIBRARIES "libobs")
-    set(OBS_FRONTEND_LIB "obs-frontend-api")
-endif()
+# Uncomment these lines if you want to use the OBS Frontend API in your plugin
 
-if (APPLE)
-    add_definitions(-DMACOS=1)
-    set(tuna_platform_sources "./src/util/window/window_helper_mac.mm")
-    find_library(COCOA Cocoa)
+if (LOCAL_INSTALLATION)
 
-    include_directories(${COCOA})
-    set_source_files_properties("./src/util/window/window_helper_mac.mm"
-        PROPERTIES COMPILE_FLAGS "-fobjc-arc")
+    if (UNIX AND NOT APPLE)
+        target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE "/usr/include/obs")
+        set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
+        find_package(LibObs REQUIRED)
+        target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE obs-frontend-api libobs)
 
-    # taglib needs zlib
-    set(tuna_platform_deps
-        ${COCOA}
-        z)
-    set(FRONTEND_LIB "${OBS_FRONTEND_LIB}")
+        # Installs into home directory
+        add_custom_command(TARGET ${CMAKE_PROJECT_NAME} POST_BUILD
+            # Copy to obs-studio dev environment for immediate testing
+            COMMAND "${CMAKE_COMMAND}" -E make_directory
+                    "$ENV{HOME}/.config/obs-studio/plugins/${CMAKE_PROJECT_NAME}/bin/64bit"
+            COMMAND "${CMAKE_COMMAND}" -E make_directory
+                    "$ENV{HOME}/.config/obs-studio/plugins/${CMAKE_PROJECT_NAME}/data"
+            COMMAND "${CMAKE_COMMAND}" -E copy
+                    "$<TARGET_FILE:${CMAKE_PROJECT_NAME}>"
+                    "$ENV{HOME}/.config/obs-studio/plugins/${CMAKE_PROJECT_NAME}/bin/64bit"
+            COMMAND "${CMAKE_COMMAND}" -E copy_directory
+                    "${PROJECT_SOURCE_DIR}/data"
+                    "$ENV{HOME}/.config/obs-studio/plugins/${CMAKE_PROJECT_NAME}/data"
+        )
+        target_sources(tuna PUBLIC "./src/util/window/window_helper_nix.cpp")
+    elseif (WIN32)
+        target_sources(tuna PUBLIC "./src/util/window/window_helper_win.cpp")
+        if(NOT DEFINED OBS_FRONTEND_LIB)
+            set(OBS_FRONTEND_LIB "OBS_FRONTEND_LIB-NOTFOUND" CACHE FILEPATH "OBS frontend library")
+            message(FATAL_ERROR "Could not find OBS Frontend API\'s library !")
+        endif()
+        # Enable Multicore Builds and disable FH4 (to not depend on VCRUNTIME140_1.DLL when building with VS2019)
+        if (MSVC)
+            add_definitions(/MP /d2FH4-)
+        endif()
+        include_directories(
+            "${LIBOBS_INCLUDE_DIR}"
+        )
+        target_link_libraries(${CMAKE_PROJECT_NAME}
+            "${OBS_FRONTEND_LIB}"
+        )
+        get_filename_component(LibOBS_DIR ${LIBOBS_LIB} DIRECTORY)
+        add_custom_command(TARGET ${CMAKE_PROJECT_NAME} POST_BUILD
+            # Copy to obs-studio dev environment for immediate testing
+            COMMAND if $<CONFIG:Debug>==1 (
+                "${CMAKE_COMMAND}" -E copy
+                    "$<TARGET_FILE:${CMAKE_PROJECT_NAME}>"
+                    "${LibOBS_DIR}/../../rundir/$<CONFIG>/obs-plugins/64bit")
+            COMMAND if $<CONFIG:Debug>==1 (
+                "${CMAKE_COMMAND}" -E copy
+                    "$<TARGET_PDB_FILE:${CMAKE_PROJECT_NAME}>"
+                    "${LibOBS_DIR}/../../rundir/$<CONFIG>/obs-plugins/64bit")
+            COMMAND if $<CONFIG:Debug>==1 (
+                "${CMAKE_COMMAND}" -E make_directory
+                    "${LibOBS_DIR}/../../rundir/$<CONFIG>/data/obs-plugins/${CMAKE_PROJECT_NAME}")
+            COMMAND if $<CONFIG:Debug>==1 (
+                "${CMAKE_COMMAND}" -E copy_directory
+                    "${PROJECT_SOURCE_DIR}/data"
+                    "${LibOBS_DIR}/../../rundir/$<CONFIG>/data/obs-plugins/${CMAKE_PROJECT_NAME}")
+        )
+    endif()
+
 else()
-    set(FRONTEND_LIB "obs-frontend-api")
-    set(OBS_LIB "libobs")
+    find_package(libobs REQUIRED)
+    find_package(obs-frontend-api REQUIRED)
+    target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OBS::obs-frontend-api)
+    target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OBS::libobs)
 endif()
 
-if (UNIX)
-    add_definitions(-DUNIX=1)
-endif ()
+# Uncomment those lines if you want to use Qt in your plugin
+find_qt(COMPONENTS Widgets Core)
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Qt::Core Qt::Widgets tag mpdclient)
+set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON)
 
-if (MSVC)
-    set(tuna_platform_sources "./src/util/window/window_helper_win.cpp")
-    set(tuna_platform_deps
-        ${W32_PTHREADS_LIB}
-        wsock32)
-endif ()
+configure_file(src/plugin-macros.h.in ${CMAKE_SOURCE_DIR}/src/plugin-macros.generated.h)
 
-set(tuna_sources
-    ./src/tuna_plugin.cpp
-    ./src/util/constants.hpp
-    ./src/util/config.cpp
-    ./src/util/config.hpp
-    ./src/util/creds.hpp
-    ./src/gui/tuna_gui.cpp
-    ./src/gui/tuna_gui.hpp
-    ./src/gui/output_edit_dialog.cpp
-    ./src/gui/output_edit_dialog.hpp
-    ./src/gui/music_control.cpp
-    ./src/gui/music_control.hpp
-    ./src/gui/scrolltext.cpp
-    ./src/gui/scrolltext.hpp
-    ./src/query/music_source.hpp
-    ./src/query/music_source.cpp
-    ./src/query/spotify_source.cpp
-    ./src/query/spotify_source.hpp
-    ./src/query/mpd_source.cpp
-    ./src/query/mpd_source.hpp
-    ./src/query/window_source.cpp
-    ./src/query/window_source.hpp
-    ./src/query/lastfm_source.cpp
-    ./src/query/lastfm_source.hpp
-    ./src/query/gpmdp_source.cpp
-    ./src/query/gpmdp_source.hpp
-    ./src/query/web_source.cpp
-    ./src/query/web_source.hpp
-    ./src/query/icecast_source.cpp
-    ./src/query/icecast_source.hpp
-    ./src/query/song.cpp
-    ./src/query/song.hpp
-    ./src/util/format.cpp
-    ./src/util/format.hpp
-    ./src/source/progress.cpp
-    ./src/source/progress.hpp
-    ./src/util/cover_tag_handler.cpp
-    ./src/util/cover_tag_handler.hpp
-    ./src/query/vlc_obs_source.cpp
-    ./src/query/vlc_obs_source.hpp
-    ./src/util/tuna_thread.cpp
-    ./src/util/tuna_thread.hpp
-    ./src/util/utility.cpp
-    ./src/util/utility.hpp
-    ./src/util/web_server.cpp
-    ./src/util/web_server.hpp
-    ./src/util/window/window_helper.hpp
-    ./src/gui/widgets/lastfm.cpp
-    ./src/gui/widgets/lastfm.hpp
-    ./src/gui/widgets/mpd.cpp
-    ./src/gui/widgets/mpd.hpp
-    ./src/gui/widgets/window_title.cpp
-    ./src/gui/widgets/window_title.hpp
-    ./src/gui/widgets/icecast.cpp
-    ./src/gui/widgets/icecast.hpp
-    ./src/gui/widgets/spotify.cpp
-    ./src/gui/widgets/spotify.hpp
-    ./src/gui/widgets/vlc.cpp
-    ./src/gui/widgets/vlc.hpp
-    "${MONGOOSE_SRC}"
-    ${tuna_ui_headers}
-)
+target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/plugin-macros.generated.h)
 
-add_library(tuna MODULE
-    ${tuna_sources}
-    ${tuna_ui}
-    ${tuna_platform_sources}
-    ${tuna_qrc_sources})
+# /!\ TAKE NOTE: No need to edit things past this point /!\
 
-include_directories(
-    "${LIBOBS_INCLUDE_DIR}/../UI/obs-frontend-api"
-    ${LIBOBS_INCLUDE_DIR}
-    ${Qt6Core_INCLUDES}
-    ${Qt6Widgets_INCLUDES}
-)
+# --- Platform-independent build settings ---
 
-target_link_libraries(tuna
-    ${LIBOBS_LIBRARIES}
-    tag
-    mpdclient
-    Qt6::Widgets
-    Qt6::Core
-    ${OBS_FRONTEND_LIB}
-    ${LIBCURL_LIBRARIES}
-    ${tuna_platform_deps})
+target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/src)
+
+
+# --- End of section ---
 
 # --- Windows-specific build settings and tasks ---
-if(WIN32)
-    if(NOT DEFINED OBS_FRONTEND_LIB)
-        set(OBS_FRONTEND_LIB "OBS_FRONTEND_LIB-NOTFOUND" CACHE FILEPATH "OBS frontend library")
-        message(FATAL_ERROR "Could not find OBS Frontend API\'s library !")
-    endif()
+if(OS_WINDOWS)
+  configure_file(cmake/bundle/windows/installer-Windows.iss.in
+                 ${CMAKE_BINARY_DIR}/installer-Windows.generated.iss)
 
-    # Enable Multicore Builds and disable FH4 (to not depend on VCRUNTIME140_1.DLL when building with VS2019)
-    if (MSVC)
-        add_definitions(/MP /d2FH4-)
-    endif()
+  if(MSVC)
+    target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE /W4)
+  endif()
+  # --- End of section ---
 
-    include_directories(
-        "${LIBOBS_INCLUDE_DIR}"
-    )
+  # -- macOS specific build settings and tasks --
+elseif(OS_MACOS)
+  configure_file(cmake/bundle/macos/installer-macos.pkgproj.in
+                 ${CMAKE_BINARY_DIR}/installer-macos.generated.pkgproj)
 
-    target_link_libraries(${CMAKE_PROJECT_NAME}
-        "${OBS_FRONTEND_LIB}"
-    )
+  set(MACOSX_PLUGIN_GUI_IDENTIFIER "${MACOS_BUNDLEID}")
+  set(MACOSX_PLUGIN_BUNDLE_VERSION "${CMAKE_PROJECT_VERSION}")
+  set(MACOSX_PLUGIN_SHORT_VERSION_STRING "1")
 
-    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-        set(ARCH_NAME "64bit")
-        set(OBS_BUILDDIR_ARCH "build64")
-    else()
-        set(ARCH_NAME "32bit")
-        set(OBS_BUILDDIR_ARCH "build32")
-    endif()
+  target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE -Wall)
+  # --- End of section ---
 
-    get_filename_component(LibOBS_DIR ${LIBOBS_LIB} DIRECTORY)
-
-    add_custom_command(TARGET ${CMAKE_PROJECT_NAME} POST_BUILD
-        # Copy to obs-studio dev environment for immediate testing
-        COMMAND if $<CONFIG:Debug>==1 (
-            "${CMAKE_COMMAND}" -E copy
-                "$<TARGET_FILE:${CMAKE_PROJECT_NAME}>"
-                "${LibOBS_DIR}/../../rundir/$<CONFIG>/obs-plugins/${ARCH_NAME}")
-
-        COMMAND if $<CONFIG:Debug>==1 (
-            "${CMAKE_COMMAND}" -E copy
-                "$<TARGET_PDB_FILE:${CMAKE_PROJECT_NAME}>"
-                "${LibOBS_DIR}/../../rundir/$<CONFIG>/obs-plugins/${ARCH_NAME}")
-
-        COMMAND if $<CONFIG:Debug>==1 (
-            "${CMAKE_COMMAND}" -E make_directory
-                "${LibOBS_DIR}/../../rundir/$<CONFIG>/data/obs-plugins/${CMAKE_PROJECT_NAME}")
-
-        COMMAND if $<CONFIG:Debug>==1 (
-            "${CMAKE_COMMAND}" -E copy_directory
-                "${PROJECT_SOURCE_DIR}/data"
-                "${LibOBS_DIR}/../../rundir/$<CONFIG>/data/obs-plugins/${CMAKE_PROJECT_NAME}")
-    )
-
-elseif(UNIX AND NOT APPLE)
-    include(GNUInstallDirs)
-
-    set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES PREFIX "")
-    target_link_libraries(${CMAKE_PROJECT_NAME} obs-frontend-api)
-    if (NOT OBS_ARCH_NAME)
-        message(FATAL_ERROR "Can't install plugin without knowing architecture")
-    endif()
-
-    if (LOCAL_INSTALLATION)
-        # Installs into home directory
-        install(TARGETS ${CMAKE_PROJECT_NAME}
-            LIBRARY DESTINATION "$ENV{HOME}/.config/obs-studio/plugins/${CMAKE_PROJECT_NAME}/bin/${OBS_ARCH_NAME}")
-
-        install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/data
-            DESTINATION "$ENV{HOME}/.config/obs-studio/plugins/${CMAKE_PROJECT_NAME}")
-    elseif(GLOBAL_INSTALLATION)
-        # For *.deb installer
-        install(TARGETS ${CMAKE_PROJECT_NAME}
-            LIBRARY DESTINATION "/usr/lib/obs-plugins") # hardcoded, since ubuntu uses the wrong path by default
-
-        file(GLOB locale_files data/locale/*.ini)
-        file(GLOB other_files data/*.*)
-
-        install(FILES ${locale_files}
-            DESTINATION "${CMAKE_INSTALL_FULL_DATAROOTDIR}/obs/obs-plugins/${CMAKE_PROJECT_NAME}/locale")
-        install(FILES ${other_files}
-            DESTINATION "${CMAKE_INSTALL_FULL_DATAROOTDIR}/obs/obs-plugins/${CMAKE_PROJECT_NAME}")
-    else()
-        # For *.zip binary
-        install(TARGETS ${CMAKE_PROJECT_NAME}
-            LIBRARY DESTINATION "${CMAKE_PROJECT_NAME}/bin/${OBS_ARCH_NAME}")
-
-        install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/data
-            DESTINATION "${CMAKE_PROJECT_NAME}")
-
-        install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/package/README.txt"
-            DESTINATION "${CMAKE_PROJECT_NAME}")
-    endif()
-elseif(APPLE)
-    if(NOT DEFINED OBS_FRONTEND_LIB)
-        set(OBS_FRONTEND_LIB "OBS_FRONTEND_LIB-NOTFOUND" CACHE FILEPATH "OBS frontend library")
-        message(FATAL_ERROR "Could not find OBS Frontend API\'s library !")
-    endif()
-
-    target_link_libraries(${CMAKE_PROJECT_NAME}
-        "${OBS_FRONTEND_LIB}"
-    )
-
-    if (LOCAL_INSTALLATION)
-        # Installs into home directory
-        install(TARGETS ${CMAKE_PROJECT_NAME}
-            LIBRARY DESTINATION "$ENV{HOME}/Library/Application Support/obs-studio/plugins/${CMAKE_PROJECT_NAME}/bin/")
-
-        install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/data
-            DESTINATION "$ENV{HOME}/Library/Application Support/obs-studio/plugins/${CMAKE_PROJECT_NAME}")
-    endif()
+  # --- Linux-specific build settings and tasks ---
+else()
+  target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE -Wall)
 endif()
+# --- End of section ---
+
+setup_plugin_target(${CMAKE_PROJECT_NAME})
