--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -131,7 +131,7 @@ jobs:
         if: ${{ github.event_name != 'pull_request' && steps.setup.outputs.haveCodesignIdent == 'true' }}
         uses: apple-actions/import-codesign-certs@253ddeeac23f2bdad1646faac5c8c2832e800071
         with:
-          keychain-password: ${{ github.run_id }}
+          KEYhain-password: ${{ github.run_id }}
           p12-file-base64: ${{ secrets.MACOS_SIGNING_CERT }}
           p12-password: ${{ secrets.MACOS_SIGNING_CERT_PASSWORD }}
 
@@ -148,6 +148,8 @@ jobs:
           target: ${{ matrix.arch }}
           config: RelWithDebInfo
           codesign: 'true'
+          lastfmKey: ${{ secrets.LASTFM_KEY }}
+          spotifyToken: ${{ secrets.SPOTIFY_TOKEN }}
           codesignIdent: ${{ env.CODESIGN_IDENT }}
 
       - name: Package Plugin
@@ -233,6 +235,8 @@ jobs:
           workingDirectory: ${{ github.workspace }}/plugin
           target: ${{ matrix.arch }}
           config: RelWithDebInfo
+          lastfmKey: ${{ secrets.LASTFM_KEY }}
+          spotifyToken: ${{ secrets.SPOTIFY_TOKEN }}
 
       - name: Package Plugin
         uses: ./plugin/.github/actions/package-plugin
@@ -311,6 +315,8 @@ jobs:
         with:
           workingDirectory: ${{ github.workspace }}/plugin
           target: ${{ matrix.arch }}
+          lastfmKey: ${{ secrets.LASTFM_KEY }}
+          spotifyToken: ${{ secrets.SPOTIFY_TOKEN }}
           config: RelWithDebInfo
           visualStudio: 'Visual Studio 17 2022'
 
