--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ set(PLUGIN_AUTHOR "univrsal")
 
 # Replace `com.example.obs-plugin-template` with a unique Bundle ID for macOS releases (used both in
 # the installer and when submitting the installer for notarization)
-set(MACOS_BUNDLEID "com.example.${CMAKE_PROJECT_NAME}")
+set(MACOS_BUNDLEID "xyz.vrsal.${CMAKE_PROJECT_NAME}")
 
 # Replace `me@contoso.com` with the maintainer email address you want to put in Linux packages
 set(LINUX_MAINTAINER_EMAIL "uni@vrsal.xyz")
