--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -1,8 +1,7 @@
 set(LIBMPDCLIENT_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/libmpdclient/include")
 set(TAGLIB_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/taglib" CACHE STRING "" FORCE)
 set(LIBMPDCLIENT_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/libmpdclient/include CACHE STRING "" FORCE)
-set(MONGOOSE_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/mongoose CACHE STRING "" FORCE)
-set(MONGOOSE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/mongoose/mongoose.c CACHE STRING "" FORCE)
+set(CPPHTTPLIB_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/cpp-httplib CACHE STRING "" FORCE)
 
 set(MAJOR_VERSION 2)
 set(MINOR_VERSION 20)
